--- a/css/nb.css
+++ b/css/nb.css
@@ -1,29 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell&family=Raleway:wght@300&display=swap');
+
+:root{
+    --black:#333333;
+    --red:#C1272D;
+    --shaded-red:#DF9595;
+    --green:#00751F;
+    --white:#FFFFFF;
+    --twhite:rgba(255,255,255,0.8);
+    box-sizing:border-box;
+}
+*{
+    box-sizing: inherit;
+}
 body{
-    font-family: Verdana;
+    font-family: Raleway,Verdana, Geneva, Tahoma, sans-serif;
+    color:var(--black);
+    font-size: 1rem;
+}
+img{
+    max-width: 100%;
+    height: auto;
 }
 .accessibility{
     position:absolute;
     left: -15000px;
 }
-main h1{
-    color:red;
-    text-align: right;
-}
-main p::first-letter{
-    font-size: 20px;
-}
 #mainHeader,#mainFooter{
-    background-color: red;
+    background-color:var(--red);
+}
+#mainHeader{
+    height: 40px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+#logoImg{
+    width: 80px;
+    padding: 5px;
+    z-index: 1000;
+    position: relative;
 }
 #mainHeader > h1{
-    color: brown;
+    color: var(--white);
+    font-size: 1.3em;
+    font-weight: normal;
+    display: none;
+}
+#mainNav{
+    background-color: var(--red);
+    position: absolute;
+    width: 100%;
+    top:40px;
+    padding-bottom: 10px;
+    display: none;
+}
+#mainNav ul{
+    list-style: none;
+    padding:0;
+    margin: 0;
+    font-family:Cantarell,Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.5em;
 }
 #mainNav a:link{
-    color: white;
+    color:var(--white);
+    text-decoration: none;
 }
 #mainNav a:hover{
-    color: brown;
+    color:var(--shaded-red);
+}
+#pageContent{
+    background:url(/images/image-1.jpg) center center / cover no-repeat fixed; 
+    padding: 100px 20px;
+    min-height: 100vh;
+}
+main{
+    background-color: var(--twhite);
+    padding: 20px;
+}
+#leftCol h1{
+    font-family: Cantarell,Verdana, Geneva, Tahoma, sans-serif;
+    color:var(--green);
+    text-align: right;
+    letter-spacing: .1em;
+}
+#leftCol p{
+    line-height: 1.3;
 }
 aside h1{
-    color: green;
+    color:var(--green);
+}
+#mainFooter {
+    text-align: center;
+    height: 40px;
+    font-size: .5em;
+    position:fixed;
+    bottom: 0;
+    width: 100%;
 }
